Create Module Page

--- a/aclap/src/app/components/edit/edit-displayer/edit-displayer.component.html
+++ b/aclap/src/app/components/edit/edit-displayer/edit-displayer.component.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div class="col-12" *ngIf="isYoutube(section)">
-        <div class="card shadow-lg">
+        <div class="card shadow">
             <div class="card-header">
                 <button type="button" class="close" (click)="deleteSection(i)" >&times;</button>
                 <h3 class="modal-title">Link de Youtube</h3>
