--- a/aclap/src/app/components/modules/modules.component.html
+++ b/aclap/src/app/components/modules/modules.component.html
@@ -7,6 +7,13 @@
         </div>
     </div>
     <div class="container">
+        <div class="row row-content">
+            <div class="col-12">
+                <div class="btn clickable btn-lg col-12" [routerLink]="['/crear','modulo']">
+                    Agregar Módulo
+                </div>
+            </div>
+        </div>
         <div class="row row-content d-flex justify-content-center">
             <app-module-card-list></app-module-card-list>
         </div>
