--- a/aclap/src/app/components/create-module/create-module.component.html
+++ b/aclap/src/app/components/create-module/create-module.component.html
@@ -2,11 +2,13 @@
     <div class="container">
         <div class="row">
             <div class="col-11">
-                <h1 style="font-size:50px;">Editar: {{module.name}} </h1>
+                <h1 style="font-size:50px;">Crear: {{module.name}} </h1>
             </div>
+            <!--
             <div class="col-1">
                 <a class="wt" [routerLink]="['../']">VOLVER</a>
             </div>
+            -->
         </div>
     </div>
 </div>
