--- a/aclap/src/app/components/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-edit/module-edit.component.html
@@ -12,11 +12,11 @@
 </div>
 <div class="container-fluid cont-fluid pt-5">
     <div class="row">
-        <div class="col-12 col-md-7">
+        <div class="col-12 col-lg-7">
             <!-- LEFT ROW  -->
             <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-12">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-xl-10">
                         <app-edit-displayer [sections]=sections></app-edit-displayer>
                     </div>
                 </div>
@@ -38,9 +38,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-5 order-first order-md-last">
+        <div class="col-12 col-lg-5 order-first order-md-last">
             <!-- RIGHT ROW  -->
-            <div class="container-fluid pt-0 pt-md-5">
+            <div class="container pt-0 pt-md-5">
                 <div class="row">
                     <div class="col-6">
                         <button class="btn btn-success btn-lg col-12" (click)="checkStatus()">Confirmar Cambios</button>
