--- a/aclap/src/app/components/edit/edit-displayer/edit-displayer.component.scss
+++ b/aclap/src/app/components/edit/edit-displayer/edit-displayer.component.scss
@@ -1,8 +1,15 @@
 @use '../../app.component.scss';
 
 .card{
-    margin-bottom: 50px;
+    margin-bottom: 0px;
 }
+
+.example-custom-placeholder {
+    background: #ccc;
+    border: dotted 3px #999;
+    min-height: 60px;
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  }
 
 .card-header{
     background-color: app.$nav-color;
@@ -11,4 +18,8 @@
     button{
         color: white;
     }
+}
+
+.holder{
+    margin-bottom: 50px;
 }
