--- a/aclap/src/app/components/footer/footer.component.html
+++ b/aclap/src/app/components/footer/footer.component.html
@@ -14,8 +14,8 @@
             <div class="col-3 offset-xs-1 offset-sm-2 col-sm-3">
                 <!--TODO: USE THE ROUTER-->
                 <ul class="list-unstyled footer-text">
-                    <li><a>Ser Educador</a></li>
-                    <li><a>Iniciar Sesión</a></li>
+                    <li><a>Persona Educadora</a></li>
+                    <li><a>Ingresar</a></li>
                 </ul>
             </div>
             <div class="col-12 offset-xs-1 col-sm-4 align-self-center">
