--- a/aclap/src/app/components/home/home.component.scss
+++ b/aclap/src/app/components/home/home.component.scss
@@ -8,6 +8,11 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.image-bg{
+    height: 300px;
+}
+
 .btn-goto{
     background-color: app.$button-color;
     color: white;
