--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -47,19 +47,28 @@
         <div class="col-12">
             <h1>Presentación</h1>
         </div>
-        <div class="col-12">
-            <p>Lorem ipsum dolor sit amet, consectetur 
-                adipiscing elit. Ut luctus enim ac dui 
-                blandit efficitur. Aenean vitae ex ipsum. 
-                Nam turpis neque, maximus in urna eget, 
-                consectetur cursus neque. Nulla porta 
-                fermentum ex, varius maximus diam tempus 
-                sit amet. Nullam a dui felis. Fusce 
-                efficitur nisi sit amet enim suscipit, 
-                quis lobortis nisi ornare. Maecenas porta 
-                rutrum lacus vitae ultricies. Nullam 
-                imperdiet nulla non risus pulvinar 
-                rutrum.
+        <div class="col-12"> <!--CHANGE TO STRINGS FROM FIREBASE-->
+            <p>Pellentesque vitae ultricies purus, 
+                quis pretium tellus. Nam quis felis 
+                mi. Etiam ac lacinia dolor, eu egestas 
+                purus. Morbi quis nulla diam. Nullam 
+                magna magna, pharetra eu massa eget, 
+                fringilla vestibulum lorem. Duis blandit 
+                risus ex, nec gravida enim tincidunt 
+                eget. Aenean faucibus elit nibh, et 
+                ultricies libero efficitur efficitur. 
+                Etiam molestie placerat nulla, vitae 
+                euismod tellus porttitor sit amet. Duis 
+                sit amet lacus urna. Aliquam a tellus eu 
+                risus dictum faucibus eget suscipit 
+                turpis. Interdum et malesuada fames ac 
+                ante ipsum primis in faucibus. 
+                Pellentesque dignissim vitae nibh non 
+                facilisis. Phasellus auctor libero eget 
+                turpis vehicula lobortis. Fusce enim 
+                quam, facilisis nec consequat ut, egestas 
+                et augue. Proin ut ligula vel leo 
+                pellentesque fermentum in in purus.
             </p>
             <p>Pellentesque vitae ultricies purus, 
                 quis pretium tellus. Nam quis felis 
@@ -93,7 +102,7 @@
             </div>
         </div>
         <div class="col-md-4 mb-3" style="height: 250px;">
-            <div class="card h-100 button d-flex justify-content-center">
+            <div class="card h-100 button d-flex justify-content-center" [routerLink]="['/modulos']">
                 <h2 class="my-auto text-center">Módulos educativos</h2>
             </div>
         </div>
