--- a/aclap/src/app/components/module-card/module-card.component.scss
+++ b/aclap/src/app/components/module-card/module-card.component.scss
@@ -2,8 +2,9 @@
 
 $module-color: app.$nav-color;
 $l-grey: #F8F8F8;
-$break-small: 320px;
 
+
+/*
 .module-header{
     background-color: $module-color;
     color: whitesmoke;
@@ -55,4 +56,5 @@ $break-small: 320px;
 
 
 }
+*/
 
