--- a/aclap/src/app/components/module-card-list/module-card-list.component.html
+++ b/aclap/src/app/components/module-card-list/module-card-list.component.html
@@ -1,1 +1,7 @@
-<app-module-card *ngFor="let module of modules" [module]="module"></app-module-card>
+<div class="row" *ngFor="let module of modules">
+    <div class="col-sm-6 col-md-4 col-lg-3" [routerLink]="['/modulos',module.id]">
+        <app-module-card [module]="module"></app-module-card>
+    </div>
+</div>
+
+
