--- a/aclap/src/app/components/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-edit/module-edit.component.html
@@ -43,7 +43,7 @@
             <div class="container pt-0 pt-md-5">
                 <div class="row">
                     <div class="col-6">
-                        <button class="btn btn-success btn-lg col-12" (click)="checkStatus()">Confirmar Cambios</button>
+                        <button class="btn btn-success btn-lg col-12" (click)="submitSections()">Confirmar Cambios</button>
                     </div>
                     <div class="col-6">
                         <button class="btn btn-danger btn-lg col-12" (click)="checkStatus()">Descartar Cambios</button>
