--- a/aclap/src/app/components/modules/modules.component.html
+++ b/aclap/src/app/components/modules/modules.component.html
@@ -1,21 +1,58 @@
-<div>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <div class="row">
-                <h1 style="font-size:50px;">Módulos de aprendizaje</h1>
+<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url(https://images.unsplash.com/photo-1604390254113-b1b9e87bdf11?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=1280)'}">
+    <div class="d-none d-xl-block" style="height: 500px">
+    </div>
+    <div class="d-none d-lg-block" style="height: 400px">
+    </div>
+    <div class="d-none d-md-block" style="height: 350px">
+    </div>
+    <div class="d-none d-sm-block" style="height: 300px">
+    </div>
+    <div class="d-show d-sm-block" style="height: 200px">
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Módulos</h1>
+        </div>
+        <div class="col-12"> <!--CHANGE TO STRINGS FROM FIREBASE-->
+            <p>Pellentesque vitae ultricies purus,  
+                quis pretium tellus. Nam quis felis 
+                mi. Etiam ac lacinia dolor, eu egestas 
+                purus. Morbi quis nulla diam. Nullam 
+                magna magna, pharetra eu massa eget, 
+                fringilla vestibulum lorem. Duis blandit 
+                risus ex, nec gravida enim tincidunt 
+                eget. Aenean faucibus elit nibh, et 
+                ultricies libero efficitur efficitur. 
+                Etiam molestie placerat nulla, vitae 
+                euismod tellus porttitor sit amet. Duis 
+                sit amet lacus urna. Aliquam a tellus eu 
+                risus dictum faucibus eget suscipit 
+                turpis. Interdum et malesuada fames ac 
+                ante ipsum primis in faucibus. 
+                Pellentesque dignissim vitae nibh non 
+                facilisis. Phasellus auctor libero eget 
+                turpis vehicula lobortis. Fusce enim 
+                quam, facilisis nec consequat ut, egestas 
+                et augue. Proin ut ligula vel leo 
+                pellentesque fermentum in in purus.
+            </p>
+        </div>
+    </div>
+    <div class="row row-content">
+        <div class="col-12">
+            <div class="btn clickable btn-lg col-12" [routerLink]="['/crear','modulo']">
+                Agregar Módulo
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row row-content">
-            <div class="col-12">
-                <div class="btn clickable btn-lg col-12" [routerLink]="['/crear','modulo']">
-                    Agregar Módulo
-                </div>
-            </div>
-        </div>
-        <div class="row row-content d-flex justify-content-center">
-            <app-module-card-list></app-module-card-list>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2" *ngFor="let module of modules" [routerLink]="['/modulos',module.id]">
+            <app-module-card [module]="module"></app-module-card>
         </div>
     </div>
 </div>
