Async Section submission

--- a/aclap/src/app/components/create-module/create-module.component.html
+++ b/aclap/src/app/components/create-module/create-module.component.html
@@ -45,10 +45,10 @@
             <div class="container-fluid pt-0 pt-md-5">
                 <div class="row">
                     <div class="col-6">
-                        <button class="btn btn-success btn-lg col-12" (click)="checkStatus()">Confirmar Cambios</button>
+                        <button class="btn btn-success btn-lg col-12" (click)="submitSections()">Confirmar Cambios</button>
                     </div>
                     <div class="col-6">
-                        <button class="btn btn-danger btn-lg col-12" (click)="checkStatus()">Descartar Cambios</button>
+                        <button class="btn btn-danger btn-lg col-12" >Descartar Cambios</button>
                     </div>
                 </div>
                 <div class="row mt-3">
