--- a/aclap/src/app/components/create-module/create-module.component.html
+++ b/aclap/src/app/components/create-module/create-module.component.html
@@ -48,7 +48,7 @@
                         <button class="btn btn-success btn-lg col-12" (click)="submitSections()">Confirmar Cambios</button>
                     </div>
                     <div class="col-6">
-                        <button class="btn btn-danger btn-lg col-12" >Descartar Cambios</button>
+                        <button class="btn btn-danger btn-lg col-12" [routerLink]="['/modulos']" >Descartar Cambios</button>
                     </div>
                 </div>
                 <div class="row mt-3">
