--- a/aclap/src/app/components/edit/edit-image/edit-image.component.html
+++ b/aclap/src/app/components/edit/edit-image/edit-image.component.html
@@ -14,7 +14,7 @@
     <div *ngIf="isOnline == false" class="form-group row">
         <label for="url" class="col-xl-2 col-form-label">Subir Image</label>
         <div class="col-xl-10">
-            <input type="file" formControlName="url" class="form-control" [(ngModel)]="image.url"/>
+            <input type="file" formControlName="url" class="form-control" (change)="onFileSelected($event)" [(ngModel)]="image.url"/>
         </div>
     </div>
     <div class="form-group row">
