--- a/aclap/src/app/components/edit/edit-module-info/edit-module-info.component.html
+++ b/aclap/src/app/components/edit/edit-module-info/edit-module-info.component.html
@@ -80,7 +80,7 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let d of module.disciplines; index as i">
-                            <th scope="row">{{i}}</th>
+                            <th scope="row">{{i + 1}}</th>
                             <td>{{d.subject.name}}</td>
                             <td>{{d.year}}</td>
                             <td>{{d.theme}}</td>
@@ -100,7 +100,7 @@
     <div class="row" style="margin-top: 200px;">
         <h2>Zona Peligrosa</h2>
     </div>
-    <div class="row border rounded border-danger">
+    <div class="row border rounded border-danger mb-md-5">
         <div class="col-9 my-3">
             <div class="row" style="margin-left: 12px;">
                 <h5 class="text-bold">Eliminar módulo</h5>
@@ -111,8 +111,8 @@
                 </span> 
             </div>
         </div>
-        <div class="col-auto my-4">
-            <span class="btn delete border" style="color: brown;">Eliminar módulo</span>
+        <div class="col-auto my-4" >
+            <span class="btn delete border" style="color: brown;" (click)="deleteModule()">Eliminar módulo</span>
         </div>
     </div>
     
