--- a/aclap/src/app/components/module-card/module-card.component.html
+++ b/aclap/src/app/components/module-card/module-card.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <div class="row">
-        <img [src]="module.imageUrl" class="img-fluid w-100" [alt]="module.name"> 
+        <img [src]="module.imageUrl" class="img-fluid rounded-circle" [alt]="module.name"> 
     </div>
     <div class="row">
         <div class="col">
-            <h4 class="text-center">{{ module.name }}</h4>
+            <p class="text-center">{{ module.name }}</p>
         </div>
     </div>
 </div>
