--- a/aclap/src/app/components/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-edit/module-edit.component.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 col-xl-10">
-                        <app-edit-displayer [sections]=sections></app-edit-displayer>
+                        <app-edit-displayer [sections]=sections [imageProxy]="imageProxy"></app-edit-displayer>
                     </div>
                 </div>
                 <div class="row">
