--- a/aclap/src/app/components/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-edit/module-edit.component.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-lg-5 order-first order-md-last">
+        <div class="col-12 col-lg order-first order-md-last">
             <!-- RIGHT ROW  -->
             <div class="container pt-0 pt-md-5">
                 <div class="row">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <app-edit-module-info class="mt-4" [module]=module></app-edit-module-info>
+                    <app-edit-module-info class="mt-4" [module]=module [imageProxy]="imageProxy" [moduleImage]=moduleImage [bannerImage]=bannerImage></app-edit-module-info>
                 </div>
             </div>
         </div>
