--- a/aclap/src/app/components/app.component.scss
+++ b/aclap/src/app/components/app.component.scss
@@ -11,6 +11,7 @@ $jumbo-color: #23AEE5;
 $button-color: #Ef6423;
 $lime-color: #FAB521;
 $nav-color:#1c81a9;
+$green-color: #528f41;
 $gray-dark: #596668;
 $l-grey: #d3d8d8;
 
@@ -33,7 +34,7 @@ $l-grey: #d3d8d8;
 }
 
 .jumbotron{
-    background-color: $jumbo-color;
+    background-color: $nav-color;
     color: whitesmoke;
     padding: 90px 30px 20px 30px;
     margin: 0px auto;
