--- a/aclap/src/app/components/header/header.component.html
+++ b/aclap/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+<nav class="navbar navbar-dark navbar-expand-sm fixed-top" [ngStyle]="{'background-color': colors[index]}">
     <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#Navbar">
             <span class="navbar-toggler-icon order-xs-1"></span>
@@ -6,18 +6,19 @@
         <img class="d-block d-sm-none" src="../../../assets/logo.png" height="30">
         <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
-                <a class="navbar-brand mr-auto d-none d-md-block" [routerLink]="['/inicio']"><img src="../../../assets/logo.png" height="30">EDUCA-ACLAP</a>
-                <li class="nav-item ml-md-3" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/inicio']">Inicio</a></li>
-                <li class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" > Perfil</a></li>
-                <li class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/modulos']">Módulos</a></li>
-                <li class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" >Eventos</a></li>
-                <li class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" >Acerca de</a></li>
+                <a (click)="changeIndex(0)" class="navbar-brand mr-auto d-none d-md-block" [routerLink]="['/inicio']"><img src="../../../assets/logo.png" height="30">EDUCA-ACLAP</a>
+                <li (click)="changeIndex(0)" class="nav-item ml-md-3" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/inicio']">Inicio</a></li>
+                <li *ngIf="loggedIn" (click)="changeIndex(1)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/perfil']"> Perfil</a></li>
+                <li (click)="changeIndex(0)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" [routerLink]="['/modulos']">Módulos</a></li>
+                <li (click)="changeIndex(0)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" >Eventos</a></li>
+                <li (click)="changeIndex(0)" class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" >Acerca de</a></li>
             </ul>
             <span class="navbar-text">
                 <a id="singupButton" class="btn">Persona Educadora</a>
             </span>
             <span class="navbar-text">
-                <a id="loginButton" (click)="openLogin()" class="btn">Ingresar</a>
+                <a *ngIf="!loggedIn" id="loginButton" (click)="openLogin()" class="btn">Ingresar</a>
+                <a *ngIf="loggedIn" id="loginButton" (click)="logout()" class="btn">Cerrar Sesión</a>
             </span>
         </div>
     </div>
