--- a/aclap/src/app/components/profile-shared/implementable-list/implementable-list.component.html
+++ b/aclap/src/app/components/profile-shared/implementable-list/implementable-list.component.html
@@ -1,1 +1,10 @@
-<p>implementable-list works!</p>
+<ul>
+    <li class="list-group-item" *ngFor="let implementable of list">
+        <div *ngIf="isAdmin">
+            <h3 class="clickable" [routerLink]="['/implementable','estadisticas',implementable.id]">{{ implementable.name }}</h3>
+        </div>
+        <div *ngIf="!isAdmin">
+            <h3 class="clickable" [routerLink]="['/implementacion','editar',implementable.id]">{{ implementable.name }}</h3>
+        </div>
+    </li>
+ </ul>
