update de UI movil

--- a/aclap/src/app/components/home/home.component.tns.html
+++ b/aclap/src/app/components/home/home.component.tns.html
@@ -6,10 +6,10 @@
                 <Label row="1" col="0" text="Presentación" class="welcome-text" textWrap="true"></Label>
                 <Label row="2" col="0"
                 text= "Pellentesque vitae ultricies purus, quis pretium tellus. Nam quis felis mi. Etiam ac lacinia dolor, eu egestas purus. Morbi quis nulla diam. Nullam  magna magna, pharetra eu massa eget, euismod tellus porttitor sit amet. Duis sit amet lacus urna. Aliquam a tellus eu risus dictum faucibus eget suscipit turpis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque dignissim vitae nibh non facilisis. Phasellus auctor libero eget turpis vehicula lobortis. Fusce enim quam, facilisis nec consequat ut, egestas et augue. Proin ut ligula vel leo pellentesque fermentum in in purus."
-                class= "text" textWrap="true"></Label>
+                class= "text" textWrap="true" ></Label>
             </gridlayout>
             <Button text="¿Qué significa ser una persona educadora?" class="my-button"></Button>
-            <Button text="Módulos educativos" class="my-button"></Button>
+            <Button text="Módulos educativos" class="my-button" (tap)="navigateToModules()"></Button>
             <Button text="Eventos" class="my-button"></Button>
         </StackLayout>
     </ScrollView>
