--- a/aclap/src/app/components/module-page/module-page.component.tns.scss
+++ b/aclap/src/app/components/module-page/module-page.component.tns.scss
@@ -8,20 +8,25 @@ $l-grey: #d3d8d8;
 .header-text{
     font-size: 36;
     font-weight: bold;
-    background-color: $jumbo-color;
     color: #fff;
     text-align: center;
-}
-
-.title-text{
-    font-size: 14;
-    font-weight: bold;
-    text-align: center;
-    background-color: $jumbo-color;
-    background-color: $l-grey;
 }
 
 .body-text{
     font-size: 12;
     background-color: $l-grey;
+}
+
+
+.title-text{
+    font-size: 24;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
+
+.text{
+    font-size: 12;
+    color: rgb(0, 0, 0);
+    text-align: center;
 }
