quick fixes after recent refactors

--- a/aclap/src/app/components/app.component.tns.html
+++ b/aclap/src/app/components/app.component.tns.html
@@ -20,7 +20,7 @@
 
         <StackLayout class="sidedrawer-list-item">
           <Button class="btn btn-primary sidedrawer-list-item-text"
-              text="Perfil"></Button>
+              text="Perfil" (tap)="navigateToProfile()"></Button>
         </StackLayout>
 
         <StackLayout class="sidedrawer-list-item">
